--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,15 +2,15 @@ spring:
   main:
     allow-bean-definition-overriding: true
   datasource:
-    #url: jdbc:h2:file:./TestDataBase
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:file:./TestDataBase
+    #url: jdbc:h2:mem:testdb
     username: sa
     password: password
     driver-class-name: org.h2.Driver
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         format_sql: true
