--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>studio</name>
 	<description>Back-end project for Studio Web Application</description>
-	<properties>
-		<java.version>21</java.version>
-	</properties>
+	<!--<properties>
+		<jacoco.version>0.8.8</jacoco.version>
+		<jacoco.argLine>-javaagent:${settings.localRepository}/org/jacoco/org.jacoco.agent/${jacoco.version}/org.jacoco.agent-${jacoco.version}-runtime.jar=destfile=${project.build.directory}/jacoco.exec</jacoco.argLine>
+	</properties>-->
 	<dependencies>
 		<dependency>
 			<groupId>org.sejda.imageio</groupId>
@@ -74,68 +75,37 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.12.3</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<systemPropertyVariables>
-						<spring.profiles.active>test</spring.profiles.active>
-					</systemPropertyVariables>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>3.1.2</version>
-				<configuration>
-					<configLocation>checkstyle.xml</configLocation>
-					<failOnViolation>true</failOnViolation>
-					<logViolationsToConsole>true</logViolationsToConsole>
-					<includeTestSourceDirectory>true</includeTestSourceDirectory>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>check</goal>
-						</goals>
-						<phase>compile</phase>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>com.github.spotbugs</groupId>
-				<artifactId>spotbugs-maven-plugin</artifactId>
-				<version>4.7.0.0</version>
-				<configuration>
-					<effort>Max</effort>
-					<threshold>High</threshold>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>check</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
+			<!-- JaCoCo plugin -->
+			<!--<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.8</version>
-				<configuration>
-					<output>file</output>
-				</configuration>
 				<executions>
+					&lt;!&ndash; Initialize JaCoCo agent before tests run &ndash;&gt;
 					<execution>
-						<id>jacoco-initialize</id>
+						<id>prepare-agent</id>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
 					</execution>
+					&lt;!&ndash; Generate code coverage report after tests &ndash;&gt;
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					&lt;!&ndash; Enforce coverage rules &ndash;&gt;
 					<execution>
 						<id>jacoco-check</id>
 						<goals>
@@ -149,49 +119,32 @@
 										<limit>
 											<counter>INSTRUCTION</counter>
 											<value>COVEREDRATIO</value>
-											<minimum>0.01</minimum>
-										</limit>
-										<limit>
-											<counter>LINE</counter>
-											<value>COVEREDRATIO</value>
 											<minimum>0.7</minimum>
 										</limit>
 										<limit>
 											<counter>BRANCH</counter>
 											<value>COVEREDRATIO</value>
-											<minimum>0.3</minimum>
-										</limit>
-										<limit>
-											<counter>COMPLEXITY</counter>
-											<value>COVEREDRATIO</value>
-											<minimum>0.4</minimum>
-										</limit>
-										<limit>
-											<counter>METHOD</counter>
-											<value>COVEREDRATIO</value>
-											<minimum>0.7</minimum>
-										</limit>
-										<limit>
-											<counter>CLASS</counter>
-											<value>MISSEDCOUNT</value>
-											<maximum>3</maximum>
+											<minimum>0.5</minimum>
 										</limit>
 									</limits>
 								</rule>
 							</rules>
 						</configuration>
 					</execution>
-					<execution>
-						<id>jacoco-report</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
 				</executions>
 			</plugin>
 
+			&lt;!&ndash; Surefire plugin to run the tests &ndash;&gt;
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<argLine>${jacoco.argLine}</argLine> &lt;!&ndash; JaCoCo hooks into test execution &ndash;&gt;
+				</configuration>
+			</plugin>-->
 
+			<!-- Spring Boot Maven Plugin -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
